# qncqnc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  esp32_migration_plan.md  readme.md
descriptors/: DH-Robotics_CGC-80_RTU.json  DH_AG95_descriptor.json  robotiq_2f_modbus.json
docs/: NEURASYNC_BUILD_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START.md
esp32-gripper-controller/: platformio.ini
esp32-gripper-controller/include/: lv_conf.h
esp32-gripper-controller/src/: config.h  main.cpp
esp32-gripper-controller/src/gui/: dashboard.cpp  dashboard.h  theme.h
esp32-gripper-controller/src/modbus/: gripper_controller.cpp  gripper_controller.h  modbus_rtu_esp32.cpp  modbus_rtu_esp32.h
esp32-gripper-controller/src/network/: mqtt_publisher.cpp  mqtt_publisher.h
esp32_rs485_bridge/: .gitignore  gripper_control.py  platformio.ini  scan_gripper.py
esp32_rs485_bridge/src/: main.cpp
examples/: gripper_control.cpp  gripper_dashboard.cpp  modbus_rtu_example.cpp
idl/: GripperState.idl  ModbusRTU.idl
include/: modbus_rtu.h
modbus_rtu_protocol/: CMakeLists.txt  Dockerfile  docker-compose.yml  gripper_control  readme.md
modbus_rtu_protocol/descriptors/: dh_robotics_gripper.json
modbus_rtu_protocol/examples/: gripper_control.cpp
modbus_rtu_protocol/scripts/: build.sh
schemas/: ModbusRTU_DeviceDescriptor_Schema.json
scripts/: scan_gripper.sh  test_gripper_neurasync.sh
